<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent" >

<LinearLayout
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.example.rijju.courtcounter.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teamA"
        android:textColor="#616161"
        android:textSize="25sp"
        android:fontFamily="sans-serif-medium"
        android:layout_marginStart="70dp"
        android:layout_marginTop="15dp"
        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#616161"
            android:text="@string/teamB"
            android:textSize="25sp"
            android:fontFamily="sans-serif-medium"
            android:layout_marginStart="165dp"
            android:layout_marginTop="15dp"

            />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="@string/zero"
        android:textSize="65sp"
        android:fontFamily="sans-serif-light"
        android:layout_marginStart="75dp"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="25dp"
        android:paddingTop="8dp"
        android:id="@+id/team_a_score"
        />

        <TextView

            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textColor="#000000"
            android:textSize="65sp"
            android:fontFamily="sans-serif-light"
            android:layout_marginStart="145dp"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="25dp"
            android:paddingTop="8dp"
            android:id="@+id/team_b_score"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/threePoints"
        android:textSize="15sp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:layout_marginStart="35dp"
        android:onClick="points3A" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/threePoints"
            android:paddingLeft="50dp"
            android:textSize="15sp"
            android:paddingRight="50dp"
            android:onClick="points3B"
            android:layout_marginStart="65dp" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:onClick="points2A"
        android:textSize="15sp"
        android:text="@string/twoPoints"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_marginStart="35dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:onClick="points2B"
            android:text="@string/twoPoints"
            android:textSize="15sp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_marginStart="65dp"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/freeThrow"
        android:textSize="15sp"
        android:layout_marginStart="35dp"
        android:onClick="freeThrowA"
        android:paddingStart="40dp"
        android:paddingEnd="45dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_marginTop="15dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/freeThrow"
            android:textSize="15sp"
            android:paddingStart="45dp"
            android:paddingEnd="40dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="65dp"
            android:onClick="freeThrowB" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/undo"
            android:textSize="15sp"
            android:layout_marginStart="44dp"
            android:onClick="undoA"
            android:paddingLeft="55dp"
            android:paddingRight="55dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_marginTop="15dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/undo"
            android:textSize="15sp"
            android:paddingLeft="55dp"
            android:paddingRight="55dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="84dp"
            android:onClick="undoB" />
    </LinearLayout>


</LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:onClick="reset"
        android:textSize="15sp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_marginBottom="160dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        />
</RelativeLayout>

